crates/smart-config/tests/ui/derives/rename_all_invalid_value.rs
use smart_config::DescribeConfig;

#[derive(DescribeConfig)]
#[config(tag = "version", rename_all = "unknown")]
enum TestConfig {
    V0,
    V1 { int: u64 },
}

fn main() {}
